# SPL-TERMINAL

./: Cargo.toml  README.md
src/: main.rs
src/commands/: burn_tokens.rs  create_mint.rs  mint_tokens.rs  mod.rs  transfer_tokens.rs
